[package]
authors = ["Hugo Freire <hfreire@abajar.com>"]
description = "Implementation of NeuroEvolution of Augmenting Topologies NEAT http://nn.cs.utexas.edu/downloads/papers/stanley.ec02.pdf with a Continuous-Time Recurrent Neural Networks"
documentation = "https://github.com/TLmaK0/rustneat"
homepage = "https://github.com/TLmaK0/rustneat"
keywords = ["neuroevolution", "neat", "aumenting-topologies", "genetic", "algorithm"]
license = "MIT"
name = "rustneat"
repository = "https://github.com/TLmaK0/rustneat"
version = "0.3.0"
edition = "2018"

[dependencies]
conv = "0.3.2"
lazy_static = "0.2.2"
num_cpus = "1.0"
rand = "0.6"
rulinalg = "0.3.4"
rayon = "1.0.3"
indexmap = { version = "1.0.2", features = ["serde-1"] }

rusty_dashed = { version = "0.2.1", optional = true }
open = { version = "1.2.1", optional = true }
clippy = { version = "0.0.103", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", optional = true }

cpython = { version = "0.1", optional = true }
python3-sys = { version = "0.1", optional = true }

[dev-dependencies]
blackbox = "0.1.0"
chrono = "0.4.6"

[features]
default = []
telemetry = ["rusty_dashed", "open", "serde_json"]
openai = ["cpython", "python3-sys"]

[[example]]
name = "openai"
required-features = ["cpython"]

[[example]]
name = "simple"

[[example]]
name = "function_approximation"
