[package]
authors = ["Hugo Freire <hfreire@abajar.com>"]
description = "Implementation of NeuroEvolution of Augmenting Topologies NEAT http://nn.cs.utexas.edu/downloads/papers/stanley.ec02.pdf with a Continuous-Time Recurrent Neural Networks"
documentation = "https://github.com/TLmaK0/rustneat"
homepage = "https://github.com/TLmaK0/rustneat"
keywords = ["neuroevolution", "neat", "aumenting-topologies", "genetic", "algorithm"]
license = "MIT"
name = "rustneat"
repository = "https://github.com/TLmaK0/rustneat"
version = "0.3.0"

[dependencies]
conv = "0.3.2"
crossbeam = "0.2"
lazy_static = "0.2.2"
num_cpus = "1.0"
rand = "0.4"
rulinalg = "0.3.4"

rusty_dashed = { version = "0.2.2", optional = true }
open = { version = "1.2.1", optional = true }
clippy = { version = "0.0.103", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

cpython = { version = "0.6", optional = true }
python3-sys = { version = "0.6", optional = true }
ctrlc = { version = "3.1.4", optional = true }

[features]
default = []
telemetry = ["rusty_dashed", "open", "serde", "serde_derive", "serde_json"]
openai = ["cpython", "python3-sys", "ctrlc"]
ctrnn_telemetry = []

[[example]]
name = "openai"
required-features = ["openai"]

[[example]]
name = "openai_lunar_lander"
required-features = ["openai"]

[[example]]
name = "simple_sample"

[[example]]
name = "function_approximation"

[[example]]
name = "ctrnn"
